# fcitx5-anytalk

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  doubao语音-api.md
.github/workflows/: release.yml
anytalk-daemon/: Cargo.toml
anytalk-daemon/src/: asr.rs  audio.rs  config.rs  error.rs  ipc.rs  main.rs  protocol.rs
anytalk-lib/: build.zig  build.zig.zon
anytalk-lib/.zig-cache/o/1a9751a8304618df905edd4c82544c29/: cimport.zig
anytalk-lib/.zig-cache/o/2350d70bdc5b7485bbbdf46cf164d65a/: cimport.h.d
anytalk-lib/.zig-cache/o/51e5812d81e3b8bf9e9c85a212338d69/: cimport.zig
anytalk-lib/.zig-cache/o/52d7e92afc6068dae4658ba1eebf7927/: cimport.zig
anytalk-lib/.zig-cache/o/5ed7d3f25fd3bf37d0d02eb9af286254/: cimport.zig
anytalk-lib/.zig-cache/o/653490e5a8d1f92e73e64d4422e421d9/: cimport.h  cimport.h.d
anytalk-lib/.zig-cache/o/b8c694715dd6b3c58b688db6b7821efb/: cimport.h  cimport.h.d
anytalk-lib/.zig-cache/o/d5148802520a3ef244aae9c34c13293f/: cimport.h.d
anytalk-lib/.zig-cache/o/de5f3734b6603960ecdcd6939e1dabf7/: cimport.h  cimport.h.d
anytalk-lib/include/: anytalk_api.h
anytalk-lib/src/: api.zig  asr.zig  audio.zig  context.zig  json.zig  protocol.zig  tls.zig  uuid.zig  websocket.zig
anytalk-overlay/: CMakeLists.txt
anytalk-overlay/src/: AsrController.cpp  AsrController.h  AuroraBars.cpp  AuroraBars.h  Config.cpp  Config.h  OverlayService.cpp  OverlayService.h  OverlayState.h  OverlayWindow.cpp  OverlayWindow.h  SettingsDialog.cpp  SettingsDialog.h  StatusDot.cpp  StatusDot.h  Theme.h  main.cpp
anytalk-overlay/src/asr/: AsrBackend.h  AsrBackendFactory.cpp  AsrBackendFactory.h  VolcengineBackend.cpp  VolcengineBackend.h  VolcengineProtocol.cpp  VolcengineProtocol.h
anytalk-overlay/src/audio/: AudioCapture.cpp  AudioCapture.h  PulseSourceProbe.cpp  PulseSourceProbe.h
data/: anytalk-addon.conf  anytalk.conf  org.fcitx.Fcitx5.AnyTalk.Overlay.service  waybar-anytalk.css
docs/: architecture.md
packaging/aur/: PKGBUILD.in
src/: addon.cpp  addon.h  constants.h  daemon_manager.cpp  daemon_manager.h  ipc_client.cpp  ipc_client.h
