[package]
name = "anytalk-daemon"
version = "0.2.0"
edition = "2021"
description = "Voice-to-text daemon for fcitx5-anytalk"
license = "MIT"
repository = "https://github.com/user/fcitx5-anytalk"

[profile.release]
lto = true
strip = true
opt-level = "z"  # Optimize for binary size
codegen-units = 1

[dependencies]
cpal = "0.15"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros", "net", "signal", "time"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2.0"
